# rust-wasm-hello

./: README.md  clear.sh  run.sh
wasm/wasm-taste/: Cargo.toml  LICENSE_MIT  build.sh
wasm/wasm-taste/src/: lib.rs
www/: build.sh  index.html  package.json  webpack.config.js
www/src/: index.js  main.js
