[package]
name = "wasm-taste"
version = "0.1.0"
authors = ["Cheng Li <lichengac@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2.29"
web-sys = { version = "0.3.6", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
